--- a/src/AnyPackage/Resources/Strings.resx
+++ b/src/AnyPackage/Resources/Strings.resx
@@ -337,4 +337,32 @@
     <value>{0} '{1}' package.</value>
     <comment/>
   </data>
+  <data name="AnyPackage" xml:space="preserve">
+    <value>AnyPackage</value>
+    <comment/>
+  </data>
+  <data name="FeedbackHeader" xml:space="preserve">
+    <value>The command can be found in the following packages:</value>
+    <comment/>
+  </data>
+  <data name="FeedbackWithProvider" xml:space="preserve">
+    <value>Install-Package {0} -Provider {1}</value>
+    <comment/>
+  </data>
+  <data name="FeedbackProviderDescription" xml:space="preserve">
+    <value>AnyPackage command not found feedback provider.</value>
+    <comment/>
+  </data>
+  <data name="FeedbackWithProviderAndParameters" xml:space="preserve">
+    <value>Install-Package {0} -Provider {1}{2}</value>
+    <comment/>
+  </data>
+  <data name="FeedbackTooltip" xml:space="preserve">
+    <value>This package contains '{0}' command.</value>
+    <comment/>
+  </data>
+  <data name="FeedbackFooter" xml:space="preserve">
+    <value>More suggestions could be returned by importing additional package providers.</value>
+    <comment/>
+  </data>
 </root>
